Found issue on mobile where x-overflow still showed. Added * to hidden overflow-x css property

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,9 @@
 
 
 /* global */
-html {
+html, * {
     overflow-x:hidden;
+    
 }
 
 
